--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 body{
   width: 100vw;
   height: 100vh;
-  background: #0f093f;
+  background-color: #CD8AFF;
+  background-image: linear-gradient(0deg, #a52dff 0%, #CD8AFF 74%);
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -12,7 +13,7 @@ body{
 .battery-head{
   width: 30px;
   height: 10px;
-  background: #0e0a4f;
+  background: #CD8AFF;
   margin: 0 auto;
   border: 4px solid #fff;
   border-top-right-radius: 8px;
